Add route to delete workspace
