# areas/backend/static/swagger.json
@@ -1458,7 +1458,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/new_workspace"
+                  "$ref": "#/components/schemas/workspace"
                 }
               }
             }
@@ -1508,7 +1508,42 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/new_workspace"
+                  "$ref": "#/components/schemas/workspace"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "parameters": [
+          {
+            "name": "space_id",
+            "in": "path",
+            "description": "ID of workspace to delete",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "tags": [
+          "AdminRequest"
+        ],
+        "summary": "Delete workspace",
+        "responses": {
+          "400": {
+            "description": "Failed. Invalid workspace ID"
+          },
+          "404": {
+            "description": "Failed. Not found error"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/workspace"
                 }
               }
             }
@@ -1906,6 +1941,25 @@
             "type": "string"
           },
           "description": {
+            "type": "string"
+          }
+        }
+      },
+      "workspace": {
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "owner": {
+            "type": "string"
+          },
+          "status": {
+            "type": "string"
+          },
+          "id": {
             "type": "string"
           }
         }
